--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "6.23.1",
+    "react-day-picker": "^9.11.0",
+    "date-fns": "2.30.0",
+    "vite": "^7.1.7",
+    "@vitejs/plugin-react": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
